# enum_constants

./: .gitignore  README.md  pyproject.toml
global_enum/: __init__.py  convenience.py
src/: test_it.py
src/enum_constants/: __init__.py  convenience.py  enum_factory.py
src/global_enum/: __init__.py  convenience.py  enum_factory.py  protocols.py
tests/: test_it.py
